# learn-c

./: .gitignore  CMakeLists.txt  Makefile  build.gradle  main.c  settings.gradle
.github/workflows/: main.yml
builder/: CMakeLists.txt  Makefile  build.gradle  settings.gradle
builder/team-a/: CMakeLists.txt  settings.gradle
builder/team-a/src/main/cpp/: library.cpp
builder/team-a/src/main/public/: library.h
builder/team-b/: CMakeLists.txt  build.gradle  settings.gradle
builder/team-b/src/main/cpp/: application.cpp
case/: Makefile  build.common.mk  build.elf.mk  heap.mk  lldb.mk  local.mk  make.debug.mk  os.mk  process.mk  run.mk  thread.mk
case/cpp/: acquire_barrier.cpp  lock.cpp  memory_fence.cpp  memory_mode.cpp  mfence.cpp
case/lldb/: dump.py  thread.bin.frame.lldb.source  thread.bin.lldb.source  type_cast.bin.lldb.source
case/src/: heap.c  thread.c  type_cast.c
docs/: README.graffle  操作系统原理.graffle
docs/README.graffle/: data.plist
docs/antora/: antora.yml  playbook.yml
docs/antora/modules/ROOT/: nav.adoc
docs/antora/modules/ROOT/examples/: builder  gdb.man  lldb.man  peace.lds
docs/antora/modules/ROOT/examples/compile/: flow.plantuml
docs/antora/modules/ROOT/examples/elf/: ld-linux-x86-64.so.readelf  ld.dynamic.txt  ld.so.txt  ld.static.txt
docs/antora/modules/ROOT/examples/gdb/: gdb-entitlement.xml  main.cpp
docs/antora/modules/ROOT/examples/help/: brk.man  free.man  (+6 more)
docs/antora/modules/ROOT/pages/: assembler.adoc  builder.adoc  compiler.adoc  elf.adoc  faq.adoc  glossary.adoc  gradle.adoc  ide.adoc  index.adoc  manual.adoc  reference.adoc  start.adoc  syntax.adoc  test.adoc  version.adoc
elf/: CMakeLists.txt  build-gnu.mk  command.mk  common.mk  other.mk
elf/c/: buffer_overflow.c  libmini.c  log_lib.h  log_main_info.c  sleep.c
elf/cpp/: lifecycle.cpp  variable.cpp
src/case/: CMakeLists.txt  Makefile
src/case/c/: heap.c  type_cast.c
src/case/cpp/: preprocess.cpp  register_cache.cpp
src/compiler/: Makefile
src/compiler/cpp/: reorder.cpp
src/elf/: CMakeLists.txt  Makefile  build-case.mk  build-gnu.mk  build-mini.mk  command.mk  common.mk  gnu.mk  run.mk
src/elf/c/: crtmini.c  elf_offset.c  empty.c  group_lib.c  group_lib.h  group_main_debug.c  group_main_info.c  log_lib.c  log_main_debug.c  minibash.c  singleton.c  thread.c  variable.c
src/elf/cpp/: all-in-one.c  dynamic.cpp  elf_offset.cpp  empty.cpp  minibash.cpp  singleton.cpp  sleep.cpp  variable.cpp  variable.graffle.json
src/elf/s/: init_fini.c  init_fini.s
src/lib/: CMakeLists.txt
src/lib/cpp/: person.cpp  pthread_usage.cpp  va7_usage.cpp  va_usage.cpp
src/lib/public/: person.h  pthread_usage.h  va_usage.h
src/main/: CMakeLists.txt
src/main/cpp/: assembly.cpp  main.cpp
src/test/: CMakeLists.txt
src/test/cpp/: LearnTest.cpp  cache_coherence_test.cpp  cache_coherence_test.linux.cpp  elf_test.cpp  enum_test.cpp  inline_test.cpp  person_test.cpp  preprocessor_test.cpp  pthread_test.cpp  string_test.cpp  syntax_test.cpp  syscall_test.cpp  temp_test.cpp  va_test.cpp
(+6 files in other folders)
