add_executable(empty c/empty.c)
add_executable(sleep c/sleep.c)
add_executable(elf_offset c/elf_offset.c)
add_executable(minibash c/minibash.c)
add_executable(singleton c/singleton.c)

add_library(group_lib c/group_lib.c c/group_lib.h)
add_executable(group_main_debug c/group_main_debug.c c/group_lib.h)
target_link_libraries(group_main_debug group_lib)
add_executable(group_main_info c/group_main_info.c c/group_lib.h)
target_link_libraries(group_main_info group_lib)
