add_executable(elf_offset other/elf_offset.c)
add_executable(empty c/empty.c)
add_executable(sleep c/sleep.c)
add_executable(minibash c/minibash.c)
add_executable(variable cpp/variable.cpp)
add_executable(buffer_overflow c/buffer_overflow.c)
add_executable(dynamic cpp/dynamic.cpp)
add_executable(thread c/thread.c)

add_library(log_lib c/log_lib.c c/log_lib.h)
add_executable(log_main_debug c/log_main_debug.c c/log_lib.h)
target_link_libraries(log_main_debug log_lib)
add_executable(log_main_info c/log_main_info.c c/log_lib.h)
target_link_libraries(log_main_info log_lib)
